<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/question_indicator"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="24dp" />

	<TextView
		android:id="@+id/question_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="24dp" />

	<LinearLayout
		android:id="@+id/buttons_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/true_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/true_button" />

		<Button
			android:id="@+id/false_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/false_button" />
	</LinearLayout>

	<LinearLayout

		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageButton
			android:id="@+id/prev_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/purple_500"
			android:contentDescription="@string/prev_button"
			android:src="@drawable/arrow_left" />

		<ImageButton
			android:id="@+id/next_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/purple_500"
			android:contentDescription="@string/next_button"
			android:src="@drawable/arrow_right" />

		<Button
			android:id="@+id/cheat_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cheat_button" />
	</LinearLayout>


</LinearLayout>