<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".CheatActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="24dp"
		android:text="@string/warning_text" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="24dp"
			android:text="@string/answer_display_text" />

		<TextView
			android:id="@+id/answer_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="24dp"
			tools:text="\?"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<Button
			android:id="@+id/go_back_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="24dp"
			android:text="@string/go_back_button" />

		<Button
			android:id="@+id/show_answer_button"
			style="@android:style/Widget.Material.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_answer_button" />

	</LinearLayout>

</LinearLayout>